# Noble-Engine

./: .gitignore  CMakeLists.txt  Doxyfile
Editor/: .txt  Keybinds.json  ResourceDatabase.nrd  editor.cap  game.ini  imgui.ini  sd.cap  vert.spv
Editor/Debug/: game.ini
Editor/GameData/Models/: cottage_obj.mtl
Editor/GameData/Scenes/: SceneSaveAs.nsc  TestScene.json  TestScene123.nsc  TestSceneBackup.nsc  TestSceneBackupRot.nsc  TestSceneBackupRot123.nsc  TestSceneHutRot.nsc  TestSceneMalformed.nsc
Editor/GameData/Shaders/: imgui.ini  standard.fs  standard.vs
Editor/GameData/UI/: MainMenu.UIL
Editor/Logs/: 24-06-2023-23-34-28.txt  24-06-2023-23-38-22.txt  24-06-2023-23-39-22.txt  24-06-2023-23-43-50.txt  24-06-2023-23-44-56.txt
Editor/Projects/: EditorTests.npj  GotD.npj  TechDemo1.npj
Editor/Release/: imgui.ini
Editor/Release/Projects/: GotD.npj
Editor/Templates/Standard/: Template.npj
Noble2.0TestingGround/NetworkingTests/: NetworkingTests.vcxproj
TechDemos/TechDemo1/: .nsc  .txt  ResourceDatabase.nrd  TechDemo1.npj  TechDemo1_Backup.npj  fdsgfdsg.nsc  game.ini  imgui.ini
TechDemos/TechDemo1/GameData/: 2D Test Scene.nsc  CamTest.nsc  LightingTest.nsc  LightingTest2.nsc  Lmao.nsc  RaycastTest.nsc  fdsafdsa.nsc  test.nsc
TechDemos/TechDemo1/Logs/: 08-05-2023-16-52-23.txt  08-05-2023-21-42-32.txt  08-05-2023-21-43-10.txt  08-05-2023-21-43-57.txt  08-05-2023-21-44-24.txt  08-05-2023-21-45-17.txt  08-05-2023-21-46-25.txt  08-05-2023-21-47-40.txt  08-05-2023-21-49-37.txt  08-05-2023-21-50-09.txt  08-05-2023-21-50-15.txt  08-05-2023-21-53-54.txt  08-05-2023-21-57-53.txt  08-05-2023-21-58-50.txt  08-05-2023-21-59-02.txt  09-05-2023-21-36-41.txt  09-05-2023-21-37-09.txt  09-05-2023-21-42-02.txt  09-05-2023-21-43-01.txt  09-05-2023-21-43-23.txt  09-05-2023-21-44-51.txt  09-05-2023-21-47-12.txt  09-05-2023-21-52-21.txt
TechDemos/TechDemo2/: TechDemo2.npj
TechDemos/TechDemo2/GameData/: Test2.nsc
TestingGround/: TestingGround.sln
TestingGround/DataSaving/: Test.item  Test.txt  main.cpp
TestingGround/Debug/: NetworkingTests.ilk
TestingGround/ECS Prototype 1/: Application.cpp  Application.h  Component.cpp  Component.h  ECS Prototype 1.vcxproj  ECS Prototype 1.vcxproj.filters  Entity.cpp  Entity.h  System.cpp  System.h  main.cpp
TestingGround/NetworkingTests/: main.cpp
TestingGround/NetworkingTests/Debug/: vc142.idb
TestingGround/Threading/: Threading.vcxproj  main.cpp
TestingGround/Vulkan/: Vulkan.vcxproj  main.cpp
TestingGround/x64/Debug/: DataSaving.ilk  ECS Prototype 1.ilk  NetworkingTests.ilk  Test.item  entityTest.entity
TestingGround/x64/Release/: ECS Prototype 1.iobj  ECS Prototype 1.ipdb  NetworkingTests.iobj  NetworkingTests.ipdb  Vulkan.iobj  Vulkan.ipdb
Vulkan/: imgui.ini
contrib/msvc-windows-x86_64/lib/: Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletDynamics.lib  LinearMath.lib
src/Editor/: Editor.aps  Editor.rc  EditorUI.cpp  EditorUI.h  EditorUI.hpp  main.cpp
src/Editor/EditorManagement/: CommandSystem.cpp  CommandSystem.h  EditorCam.cpp  EditorCam.h  EditorManager.cpp  EditorManager.h  ProjectFile.cpp  ProjectFile.h
src/Editor/Interface/: DataEditorWindow.cpp  DataEditorWindow.h  EditorSettingsWindow.cpp  EditorSettingsWindow.h  EditorUI.cpp  EditorUI.h  MainDockWindow.cpp  MainDockWindow.h  MainMenuBar.cpp  MainMenuBar.h  Profiler.cpp  Profiler.h  ProjectDetailsWindow.cpp  ProjectDetailsWindow.h  ResourceManagerWindow.cpp  ResourceManagerWindow.h  SceneHierarchyWindow.cpp  SceneHierarchyWindow.h  SceneManagerWindow.cpp  SceneManagerWindow.h  SceneViewWindow.cpp  SceneViewWindow.h
src/Engine/: Useful.cpp  Useful.h
src/Engine/Behaviours/: DebugCam.cpp  DebugCam.h
src/Engine/Components/: AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  Camera.cpp  Camera.h  Light.cpp  Light.h  MeshRenderer.cpp  MeshRenderer.h  ScriptEmbedder.cpp  ScriptEmbedder.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
src/Engine/Core/: Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  CommandTypes.cpp  CommandTypes.h  DebugUI.hpp  GraphicsPipeline.cpp  GraphicsPipeline.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  NobleDLL.cpp  NobleDLL.h  PerformanceStats.cpp  PerformanceStats.h  ProjectFile.cpp  ProjectFile.h  Registry.cpp  Registry.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  ThreadingManager.cpp  ThreadingManager.h  ToolUI.cpp  ToolUI.h  ToolUI.hpp  UI.cpp  UI.h  VersionInformation.h
src/Engine/ECS/: Behaviour.hpp  Component.cpp  Component.h  Component.hpp  ComponentList.hpp  Entity.hpp  Renderable.hpp  System.hpp
src/Engine/Game/: GameRegister.cpp  GameRegister.h
src/Engine/Lua/: NobleLuaState.cpp  NobleLuaState.h
src/Engine/Maths/: Raycaster.cpp  Raycaster.h
src/Engine/Networking/: NetworkManager.cpp  NetworkManager.h  Packet.hpp  PacketParser.h
src/Engine/Resource/: AudioClip.cpp  AudioClip.h  Font.cpp  Font.h  IniFile.cpp  IniFile.h  Model.cpp  Model.h  ModelLoader.hpp  Resource.h  Scene.cpp  Scene.h  Script.cpp  Script.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.hpp  Texture.cpp  Texture.h  UILayout.cpp  UILayout.h
src/Engine/Shaders/: standard.vert
src/Engine/Systems/: AudioListener.cpp  AudioListener.h  AudioListenerSystem.cpp  AudioListenerSystem.h  AudioSource.cpp  AudioSource.h  AudioSourceSystem.cpp  AudioSourceSystem.h  Camera.cpp  Camera.h  CameraSystem.cpp  CameraSystem.h  MeshRenderer.cpp  MeshRenderer.h  MeshRendererSystem.cpp  MeshRendererSystem.h  Sprite.cpp  Sprite.h  SpriteSystem.cpp  (+8 more)
src/Game/: main.cpp
src/NetworkTests/: main.cpp
src/NobleGame/: NobleGame.cpp  NobleGame.h
src/TestProgram/: FlyingCam.h  FlyingCamSystem.cpp  FlyingCamSystem.h  main.cpp
src/Vulkan-TestGround/: Renderer.cpp  Renderer.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanImages.cpp  VulkanImages.h  VulkanInitialisers.cpp  VulkanInitialisers.h  VulkanPipelines.cpp  VulkanPipelines.h  VulkanTypes.h  main.cpp
(+280 files in other folders)
